[gd_scene load_steps=6 format=3 uid="uid://0tx8axraun0p"]

[ext_resource type="Script" uid="uid://cvysq1i8nixep" path="res://scenes/options_scene.gd" id="1_lf08d"]
[ext_resource type="Texture2D" uid="uid://bxjn2e88vj8bk" path="res://assets/sprites/background/Title_Screen.png" id="2_gqhhd"]
[ext_resource type="Texture2D" uid="uid://drjvwne7bmbwb" path="res://assets/sprites/background/Title.png" id="3_4t4fa"]
[ext_resource type="FontFile" uid="uid://cd41wf0l0384q" path="res://assets/fonts/CourierPrime-Regular.ttf" id="4_nrq7m"]
[ext_resource type="FontFile" uid="uid://bsecanfkcihrl" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="5_oy8bw"]

[node name="OptionsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lf08d")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gqhhd")
expand_mode = 1

[node name="Title2" type="Sprite2D" parent="TextureRect"]
position = Vector2(603.356, 189.95)
scale = Vector2(0.765512, 0.499257)
texture = ExtResource("3_4t4fa")

[node name="Team name" type="Label" parent="TextureRect"]
layout_mode = 2
offset_left = 60.0
offset_top = 569.0
offset_right = 1092.0
offset_bottom = 588.0
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("4_nrq7m")
text = "Team 6 Â©"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0235294, 0.00392157, 0.678431)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oy8bw")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oy8bw")
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oy8bw")
text = "Exit
"

[connection signal="focus_exited" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_focus_exited"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
